Create the basic interface for a shopper - a navigation bar, the home page, a search page, and their cart

--- a/B07Project/app/src/main/res/values/strings.xml
+++ b/B07Project/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">B07 Project</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="shopper_home">this is the shopper\'s home page</string>
+    <string name="shopper_search">this is the shopper\'s search page</string>
+    <string name="shopper_cart">this is the shopper\'s cart</string>
 </resources>
